Simplificando o controle de acesso em métodos com meta-anotações