@@ -3,8 +3,8 @@ package com.algaworks.algafood.infrastructure.service.storage;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.util.FileCopyUtils;
 
@@ -13,26 +13,27 @@ import com.algaworks.algafood.domain.service.FotoStorageService;
 @Service
 public class LocalFotoStorageService implements FotoStorageService {
 
-	private String diretorioFotos = "C:\\Users\\Júlia Lima\\Downloads\\Neki\\trilha\\maven\\catalogo";
-	
+	@Value("${algafood.storage.local.diretorio-fotos}")
+	private Path diretorioFotos;
+
 	@Override
 	public void armazenar(NovaFoto novaFoto) {
 		try {
 			Path arquivoPath = getArquivoPath(novaFoto.getNomeAquivo());
-			
-			FileCopyUtils.copy(novaFoto.getInputStream(), 
-					Files.newOutputStream(arquivoPath));
+
+			FileCopyUtils.copy(novaFoto.getInputStream(), Files.newOutputStream(arquivoPath));
 		} catch (Exception e) {
 			throw new StorageException("Não foi possível armazenar arquivo.", e);
 		}
 	}
-	
+
 	@Override
 	public void remover(String nomeArquivo) {
 		try {
 			Path arquivoPath = getArquivoPath(nomeArquivo);
-			
+		
 			Files.deleteIfExists(arquivoPath);
+			
 		} catch (Exception e) {
 			throw new StorageException("Não foi possível excluir arquivo.", e);
 		}
@@ -47,10 +48,10 @@ public class LocalFotoStorageService implements FotoStorageService {
 	    } catch (Exception e) {
 	        throw new StorageException("Não foi possível recuperar arquivo.", e);
 	    }
-	}  
-	
+	}       
+
 	private Path getArquivoPath(String nomeArquivo) {
-	    Path diretorioPath = Paths.get(diretorioFotos);
-	    return diretorioPath.resolve(nomeArquivo);
+		return diretorioFotos.resolve(Path.of(nomeArquivo));
 	}
+
 }
